--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,16 @@ Thumbs.db
 ./libraries/
 ./tools/
 ./modes/
+
+tempaltes/
+libraries/
+tools/
+modes/
+
+.DS_Store
+applet
+application.linux32
+application.linux64
+application.windows32
+application.windows64
+application.macosx
