--- a/tools/Bootstrap/tool.properties
+++ b/tools/Bootstrap/tool.properties
@@ -1,8 +1,8 @@
 name=Bootstrap
-category=
+category=Unknown
 authorList=[Jonathan Acosta](http://poifox.com)
 url=http://poifox.com/bootstrap/
-sentence=Quickly initialize your new sketch with a predefined template.
-paragraph=Bootstrap was made to be used along with the [Templater Tool](http://poifox.com/templater/). Tested with Processing 2.0b8+, on Mac OS X 10.6.8 and Ubuntu 12.10.
-version=2
-prettyVersion=1.01
+sentence=Quickly load custom sketch templates created with the Templater tool.
+paragraph=The Bootstrap tool for Processing 2.0+ lets coders load a predefined template to their current Processing sketch as a base for further coding, removing the tedious process of writing base Procesing style code like setup(), draw() and more. Bootstrap superceedes the old InitSketch tool, and build upon the original code with better coding style and encapsulation.
+version=3
+prettyVersion=1.02
